# pySemanticSlides

./: .gitignore  .project  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: build.yml
docs/: index.md
examples/ScalingUpSemantics/: CITATION.cff  mungall-swat4hcls-2023.json
examples/semanticslides/: SemanticSlides.pptx  SemanticSlides.xlsx  ~$SemanticSlides.pptx  ~$SemanticSlides.xlsx
scripts/: blackisort  createWiki  install
search/: search_index.json
slides/: doi.py  keyvalue_parser.py  pdf_generator.py  semslides.py  slide_browser.py  slide_browser_cmd.py  slide_viewer.py  slidewalker.py  version.py
tests/: basetest.py  test_doi.py  test_keyvalue_parser.py  test_pdfgenerator.py  test_slidewalker.py  test_tokens_from_notes.py
