[build-system]
# we use the hatch build system
# https://hatch.pypa.io/latest/config/build/
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pySemanticSlides"
authors = [
  {name = "Wolfgang Fahl", email = "wf@bitplan.com"}
]
maintainers = [
  { name = "Wolfgang Fahl", email = "wf@bitplan.com" },
]
readme = "README.md"
license= "Apache-2.0"
dependencies = [
	# https://pypi.org/project/python-pptx/
	'python-pptx',
	# https://pypi.org/project/pyGenericSpreadSheet/
	'pyGenericSpreadSheet',
	# pyLoDStorage
	'pyLoDStorage>=0.4.9',
	# https://github.com/konradhalas/dacite
	'dacite>=1.7.0',
	# https://github.com/goldsmith/Wikipedia
	'wikipedia',
	# https://pypi.org/project/pyparsing/
	'pyparsing',
	# 
	'graphviz',
	# https://pypi.org/project/isbnlib/
	'isbnlib',
	# https://pypi.org/project/bibtexparser/
	'bibtexparser',
	# https://github.com/phfaist/pylatexenc/
	'pylatexenc'
]

requires-python = ">=3.8"
classifiers=[
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: User Interfaces",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License"
    ]
dynamic = ["version", "description"]
[tool.hatch.version]
path = "slides/__init__.py"

[project.urls]
Home = "https://github.com/WolfgangFahl/pySemanticSlides"
Documentation = "https://wiki.bitplan.com/index.php/PySemanticSlides"
Source = "https://github.com/WolfgangFahl/pySemanticSlides"

[project.optional-dependencies]
test = [
  "green",
]

[tool.hatch.build.targets.wheel]
packages = [
  "slides",
]

[project.scripts]
sotsog = "skg.sotsog:main"
